fix menu alignment

--- a/src/templates/blocks/header/header.styl
+++ b/src/templates/blocks/header/header.styl
@@ -59,6 +59,7 @@
     font-size 20px
     flex-direction row
     justify-content flex-end
+    align-items center
     transform none
 
   +above(800px)
